--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" lang="en" content="BadWord is a comprehensive database platform designed to filter and manage inappropriate or offensive content, ensuring a safer online environment. Explore our tools for moderating and controlling language usage effectively.">
-    <meta name="description" lang="ru" content="BadWord - это комплексная платформа базы данных, разработанная для фильтрации и управления неприемлемым или оскорбительным контентом, обеспечивая безопасную онлайн-среду. Исследуйте наши инструменты для эффективного модерирования и контроля за использованием языка.">
+<head>
+    <meta charset="UTF-8"/>
+    <link href="/icon.svg" rel="icon" type="image/svg+xml"/>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport"/>
+    <meta content="BadWord is a comprehensive database platform designed to filter and manage inappropriate or offensive content, ensuring a safer online environment. Explore our tools for moderating and controlling language usage effectively."
+          lang="en"
+          name="description">
+    <meta content="BadWord - это комплексная платформа базы данных, разработанная для фильтрации и управления неприемлемым или оскорбительным контентом, обеспечивая безопасную онлайн-среду. Исследуйте наши инструменты для эффективного модерирования и контроля за использованием языка."
+          lang="ru"
+          name="description">
     <title>Badword</title>
     <style>
-      html, body, #root {
-        height: 100%;
-      }
+        html, body, #root {
+            height: 100%;
+        }
     </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/app/main.tsx"></script>
-  </body>
+</head>
+<body>
+<div id="root"></div>
+<script src="/src/app/main.tsx" type="module"></script>
+</body>
 </html>
